--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <div class="download-section">
             <p id="timer-text">La descarga estará disponible en <span id="timer">5</span> segundos.</p>
-            <a id="download-btn" href="https://github.com/axcz2/axcz2.github.io/raw/main/Minigame.exe" class="download-btn" download disabled>Descargar Juego</a>
+            <a id="download-btn" href="https://github.com/axcz2/axcz2.github.io/raw/main/MinigameInstaller.exe" class="download-btn" download disabled>Descargar Juego</a>
         </div>
     </div>
 
