--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <div class="animated-bg"></div> <!-- Fondo animado -->
         <div class="container">
             <h1 class="animate-title">Descarga <span>Ultimate Game</span></h1>
-            <p class="animate-text">Un juego que cambiará tu experiencia. Sumérgete en un mundo lleno de aventuras con gráficos impresionantes y jugabilidad inmersiva.</p>
+            <p class="animate-text">Este juego esta desarrollado por solo 2 personas..</p>
 
             <div class="game-info animate-info">
                 <h2>Características</h2>
                 <ul>
-                    
-                    <li>Modo historia y proximamente multijugador</li>
-                    <li>Soporte 24 horas</li>
+                    <li>Gráficos Aceptables</li>
+                    <li>Modo historia</li>
+                    <li>Soporte para jugadores</li>
                     <li>Actualizaciones gratuitas y expansiones</li>
                 </ul>
             </div>
@@ -37,7 +37,9 @@
 
             <div class="download-section animate-download">
                 <p id="timer-text">La descarga estará disponible en <span id="timer">5</span> segundos.</p>
-                <a id="download-btn" href="https://github.com/axcz2/axcz2.github.io/raw/main/MinigameInstaller.exe" class="download-btn" download disabled>Descargar Juego</a>
+                <!-- Aquí pones el enlace de descarga del archivo MinigameInstaller.exe subido a GitHub -->
+                <a id="download-btn" href="https://github.com/axcz2/axcz2.github.io
+/raw/main/MinigameInstaller.exe" class="download-btn" download disabled>Descargar Juego</a>
             </div>
         </div>
     </div>
@@ -49,3 +51,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
